--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,26 @@
+
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS Files
 .DS_Store
+Thumbs.db
+
+# Production
+dist
+build
+
+# Environment
+.env
+.env.local
+
+# Editor
+.vscode
+.idea
 *.suo
 *.ntvs*
 *.njsproj
